# BlogProject

./: .gitignore  AndroidGodEye-MethodCanary.js  build.gradle  config.gradle  gradle.properties  local.properties  pds.keystore  settings.gradle  task.gradle
IM/socket/: build.gradle
IM/socket_app/: build.gradle
IM/socket_control/: build.gradle
IM/socket_data/: build.gradle
app/: build.gradle  config.gradle  proguard-rules.pro  tools.gradle
app/libs/: aspect-runtime-1.0.0.aar
auto_build/: Android.py  Constant.py  EmailSender.py  PgyerUploader.py  Steady.py  channel  config.py
base/data_entity/: build.gradle
base/debug_tool/: build.gradle
base/download/: build.gradle
base/frame/: build.gradle
base/lib_api/: build.gradle
base/lib_base/: build.gradle
base/lib_compat/: build.gradle
base/lib_env/: build.gradle
base/lib_glide/: build.gradle
base/lib_gson/: build.gradle
base/lib_help/: build.gradle
base/lib_hilt/: build.gradle
base/lib_pdf/: README.md  (+1 more)
business/: README.md
config/: android.gradle  app.gradle  arouter.gradle  base.gradle  component.gradle  config.gradle  flavors.gradle  hilt.gradle  jar.gradle  java.gradle  kotlin.gradle  lib.gradle  module.gradle  pin.gradle  root.gradle  sdk.gradle  task.gradle  test.gradle  test_android.gradle  upload.gradle  uploadMaven.gradle
doc/: GitHub上受欢迎的安卓UI库.md  cmd.md  github.md  google优秀例子.md  plugin.md  vim.md  方案.md
flutter/: flutter.gradle
gradle-app/: build.gradle  gradle.md  gradle.sh  init.gradle  study.gradle  task.gradle
lib_aspect_annotations/: build.gradle  upload.gradle
lib_aspect_runtime/: build.gradle  upload.gradle
lib_net/: build.gradle
lib_package/: build.gradle
lib_preloader/: build.gradle
lib_util/: build.gradle
mode_ui/: build.gradle
ndk/bzip2/: CMakeLists.txt  build.gradle
ndk/bzip2/src/debug/: AndroidManifest.xml
ndk/bzip2/src/main/: AndroidManifest.xml
ndk/bzip2/src/main/cpp/: bspatch.c  com_pds_bzip2_Bzip2Activity.h
ndk/bzip2/src/main/java/com/pds/bzip2/: ApkUtils.java  Bzip2Activity.java
ndk/bzip2/src/main/res/layout/: activity_main.xml
ndk/bzip2/src/main/res/values/: strings.xml
ndk/fmod/: CMakeLists.txt  build.gradle
ndk/fmod/src/debug/: AndroidManifest.xml
ndk/fmod/src/main/: AndroidManifest.xml
ndk/fmod/src/main/cpp/: change-voice.cc  com_pds_fmod_MainActivity.h
ndk/fmod/src/main/cpp/voice/: common.cpp  common_platform.cpp  fmod.h  fmod_codec.h  fmod_dsp.h  fmod_output.h
ndk/fmod/src/main/java/com/pds/fmod/: MainActivity.java
ndk/fmod/src/main/res/layout/: activity_main.xml
ndk/fmod/src/main/res/values/: strings.xml
ndk/gifmerger/: CMakeLists.txt  build.gradle
ndk/gifmerger/src/debug/: AndroidManifest.xml
ndk/gifmerger/src/main/: AndroidManifest.xml
ndk/gifmerger/src/main/cpp/: gifflen.cpp
ndk/gifmerger/src/main/java/com/pds/gifmerger/: Gifflen.java  MainActivity.java  MengBiListActivity.java
ndk/gifmerger/src/main/res/layout/: activity_meng_bi_list.xml  item_mengbi.xml
ndk/idcardrecognitioon/: CMakeLists.txt  build.gradle
ndk/idcardrecognitioon/src/debug/: AndroidManifest.xml
ndk/idcardrecognitioon/src/main/: AndroidManifest.xml
ndk/idcardrecognitioon/src/main/cpp/: native-lib.cpp
ndk/idcardrecognitioon/src/main/java/com/pds/idcardrecognitioon/: ImageProcess.java  MainActivity.java
ndk/idcardrecognitioon/src/main/res/values/: strings.xml
ndk/ndkStudy/: CMakeLists.txt  build.gradle
ndk/ndkStudy/src/debug/: AndroidManifest.xml
ndk/ndkStudy/src/main/: AndroidManifest.xml
ndk/ndkStudy/src/main/aidl/com/pds/ndk/daemon/aidl/: DaemonAidlInterface.aidl
ndk/ndkStudy/src/main/cpp/fix/: android_fix.cc  art_method.h  dalvik.h
ndk/ndkStudy/src/main/cpp/other/: native-lib.cpp  signal_process.cc  study.c  video-lib.c
ndk/ndkStudy/src/main/java/com/pds/ndk/: AndroidFixActivity.java  Caclutor.java  DexManager.java  MainActivity.java  Replace.java
ndk/ndkStudy/src/main/java/com/pds/ndk/daemon/: DaemonActivity.java
ndk/ndkStudy/src/main/java/com/pds/ndk/daemon/service/: JobHandleService.java  LocalService.java  RemoteService.java
ndk/ndkStudy/src/main/java/com/pds/ndk/daemon/signal/: ProcessService.java  Wathcer.java
ndk/ndkStudy/src/main/res/layout/: activity_main.xml
ndk/ndkStudy/src/main/res/values/: strings.xml
nettyim/: build.gradle
plugin_aspect/: build.gradle  upload.gradle
plugin_webP/: bintray.gradle  build.gradle
react/: react.gradle
sdk_third/: build.gradle
socket/: CMakeLists.txt  build.gradle
socket_app/: build.gradle
socket_control/: build.gradle
socket_data/: build.gradle
test_app/: build.gradle  readme.md
utils/: README.md
utils/antidebug/: CMakeLists.txt  build.gradle
utils/antidebug/src/main/: AndroidManifest.xml
utils/antidebug/src/main/cpp/: AntiDebug.cpp  AntiDebug.h  Log.h  SafeCheck.cpp  SafeCheck.h  native-lib.cpp  safe.cpp
utils/antidebug/src/main/cpp/exception/: ExceptionTools.cpp
utils/antidebug/src/main/cpp/firm/: EncodeSection.cpp  FirmSo.cpp
utils/antidebug/src/main/cpp/safe/: demo.c
utils/antidebug/src/main/cpp/sofafe/: decrypt.cc  so-encrypt.cc
utils/antidebug/src/main/cpp/tools/: DeviceInfo.h
utils/antidebug/src/main/java/com/pds/antidebug/: AntiDebug.java  IAntiDebugCallback.java  MainActivity.java
utils/antidebug/src/main/java/com/pds/antisafe/: AntiSafe.java  IAntiDebugCallback.java  MainActivity.java
utils/antidebug/src/main/java/com/pds/antisafe/firmso/: EncodeSection.java
xposed/dumpdex/: CMakeLists.txt  build.gradle
xposed/dumpdex/src/main/: AndroidManifest.xml
xposed/dumpdex/src/main/assets/: xposed_init
xposed/dumpdex/src/main/cpp/: native.cpp
xposed/dumpdex/src/main/java/com/pds/dumpdex/: MainActivity.java  Native.java  PackerInfo.java  XposedInit.java
xposed/dumpdex/src/main/java/com/pds/dumpdex/dump/: LowSdkDump.java  OreoDump.java
xposed/dumpdex/src/main/java/com/pds/dumpdex/util/: DeviceUtils.java  FileUtils.java
xposed/dumpdex/src/main/res/values/: strings.xml
xposed_hook/: build.gradle  signing.properties
(+2360 files in other folders)
